# apple-batch--invariant-ops

./: .gitignore  README.md  US_TAX_SERVICES_DIRECTORY.md  pyproject.toml
apple_batch_invariant_ops/: __init__.py  ops.py
benchmarks/: determinism_benchmark.py  seed_sensitivity.py
docs/: EXPERIMENTS.md
examples/: deterministic_mm.py  lm_studio_client.py
tests/: test_batch_invariant_ops.py
